fixed issue with video covering text

--- a/src/index.css
+++ b/src/index.css
@@ -1027,6 +1027,11 @@ figcaption {
     margin-top: 0;
   }
 
+  .second-section-video{
+    margin-top: 120px;
+    width: 90%;
+  }
+
   .p-title {
     font-size: 24px;
   }
